--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
-# Tell github to ignore gauss files when determining this repository's language
-*.g linguist-detectable=false
-*.py linguist-detectable=false
-*.go linguist-detectable=true
+# Tell github what to ignore when determining this repository's language: https://github.com/github/linguist
+vogelsang -linguist-detectable
+*.py -linguist-detectable
+*.go linguist-detectable
 
